# Compiler-IFJcode22

./: .gitignore  CMakeLists.txt  I_list.c  I_list.h  LLgrammar.txt  Makefile  README.md  SmallMC.c  SmallMC.h  code_gen.c  code_gen.h  comp_main.c  expr.c  expr.h  global_def.c  global_def.h  inbuild.c  inbuild.h  lex_analyz.c  lex_analyz.h  main.c  rozdeleni  sem_analyz.c  sem_analyz.h  sym_table.c  sym_table.h  syn_analyz.c  syn_analyz.h  test.c  test.h  test.txt
